# DebuggerBootstrap

./: .gitmodules  CMakeLists.txt  README.md  main.c
client/: ClientConsole.py  ClientConsoleColors.py  ClientUIDescriptor.py  CursesUI.py  DebuggerBootstrapClient.py  FileHasher.py  ProjectDescription.py  SubscriberUpdate.py
client/protocol/: .gitignore  MessageDecoder.py  cprotocol.pxd  protocol.pyx  setup.py
client/test/: testProjectDescription.py  testSubscriberUpdate.py
extra/dummy_debugger/: dummy_debugger.py
extra/dummy_project/: CMakeLists.txt  Main.c  readme.md
extra/dummy_project/dummy_dependency/: CMakeLists.txt  dummy_dependency.c  dummy_dependency.h
server/: Bootstrapper.c  Bootstrapper.h  CMakeLists.txt  DynamicBuffer.c  DynamicBuffer.h  DynamicStringArray.c  DynamicStringArray.h  EventDispatch.c  EventDispatch.h  FileHasher.c  FileHasher.h  GDBServerStartStop.c  GDBServerStartStop.h  ProjectDescription.c  ProjectDescription.h  ProjectDescription_json.c  ProjectDescription_json.h  ProjectFileDifferences.c  ProjectFileDifferences.h  SubscriberUpdate.c  SubscriberUpdate.h  clang_format_all.sh  clang_format_check_all.sh  filesystemwatcher.c  main.c
server/protocol/: Protocol.c  Protocol.h  protocol.c  protocol.h
server/test/: CMakeLists.txt  testBootstrapper.cpp  testEventDispatch.cpp  testProjectDescription.cpp  testProtocol.cpp  testSubscriberUpdate.cpp
